Viewport borders flicker when splitting said viewport #62555

Closed
opened 2019-03-13 18:01:13 +01:00 by Charbel Nicolas · 11 comments

System Information

Operating system: Windows 7 SP1
Graphics card: GeForce GTX 980 (Driver version 417.35)

Blender Version

Broken: 2.80 ffa29194bb win64 (March 13 2019)

Short description of error

When you split the viewport, the viewport borders flicker.

This wasn't the case a few weeks ago.

Exact steps for others to reproduce the error

Try splitting a viewport as in the video below:

YOUTUBE Video

**System Information** Operating system: Windows 7 SP1 Graphics card: GeForce GTX 980 (Driver version 417.35) **Blender Version** Broken: 2.80 ffa29194bbe7 win64 (March 13 2019) **Short description of error** When you split the viewport, the viewport borders flicker. This wasn't the case a few weeks ago. **Exact steps for others to reproduce the error** Try splitting a viewport as in the video below: [YOUTUBE Video ](https://youtu.be/q-AHximrnfY)

Added subscriber: @charbel

Added subscriber: @charbel

#59405 was marked as duplicate of this issue

#59405 was marked as duplicate of this issue
Member

Added subscriber: @Harley

Added subscriber: @Harley
Member

Yes, it does the same thing here. I'm assuming it is video card-specific (mine is a GeForce GTX 745).

For me the problem goes away with the following patch:
https:*developer.blender.org/D4392

Yes, it does the same thing here. I'm assuming it is video card-specific (mine is a GeForce GTX 745). For me the problem goes away with the following patch: [https:*developer.blender.org/D4392 ](https:*developer.blender.org/D4392)

Added subscribers: @fclem, @ZedDB

Added subscribers: @fclem, @ZedDB

I can not reproduce this on my end. So I guess this is GPU driver related. @fclem any ideas/input?

I can not reproduce this on my end. So I guess this is GPU driver related. @fclem any ideas/input?

@Harley your patch fixes the problem but it's because you change the blend function. I believe the blend function should be set before drawing the area corners instead of changing the actual overlay blend func. I don't really care about the patch (it's fine as it is) but it's better to have the wanted blend function set just before drawing (for clarity sake).

@Harley your patch fixes the problem but it's because you change the blend function. I believe the blend function should be set before drawing the area corners instead of changing the actual overlay blend func. I don't really care about the patch (it's fine as it is) but it's better to have the wanted blend function set just before drawing (for clarity sake).
Member

@fclem : to be really honest, I know next to nothing about openGL so was playing with that fairly blindly. It did fix my issue, but I don't have enough related knowledge to know it would not affect anyone else adversely. Which is why I abandoned that patch.

@fclem : to be really honest, I know **next to nothing** about openGL so was playing with that fairly blindly. It did fix my issue, but I don't have enough related knowledge to know it would not affect anyone else adversely. Which is why I abandoned that patch.
Clément Foucault self-assigned this 2019-03-16 03:53:12 +01:00

This issue was referenced by dbfbd6b904

This issue was referenced by dbfbd6b9043d325456225aaf4c8af7bba7cc4aa0

Added subscriber: @KaiJaegersen

Added subscriber: @KaiJaegersen

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62555
No description provided.