Fix T62555 Viewport borders flicker when splitting said viewport