source/blender/editors/screen/screen_draw.c
@@ -412,6 +412,7 @@ void ED_screen_draw_edges(wmWindow *win)
 	edge_thickness = corner_scale * 0.21f;
 
 	GPU_blend(true);
+	GPU_blend_set_func_separate(GPU_SRC_ALPHA, GPU_ONE_MINUS_SRC_ALPHA, GPU_ONE, GPU_ONE_MINUS_SRC_ALPHA);
 
 	GPUBatch *batch = batch_screen_edges_get(&verts_per_corner);
 	GPU_batch_program_set_builtin(batch, GPU_SHADER_2D_AREA_EDGES);
@@ -484,6 +485,8 @@ void ED_screen_draw_split_preview(ScrArea *sa, const int dir, const float fac)
 
 	/* splitpoint */
 	GPU_blend(true);
+	GPU_blend_set_func_separate(GPU_SRC_ALPHA, GPU_ONE_MINUS_SRC_ALPHA, GPU_ONE, GPU_ONE_MINUS_SRC_ALPHA);
+
 	immUniformColor4ub(255, 255, 255, 100);
 
 	immBegin(GPU_PRIM_LINES, 2);
